--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "yarn start",
+    "build": "yarn run build"
   },
+  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Xclusive09/REST-API.git"
