--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "mongoose": "^5.13.9"
+    "mongoose": "^5.13.9",
+    "bson": "16.20.1"
   }
 }
