--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "yarn start",
-    "build": "yarn run build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Xclusive09/REST-API.git"
@@ -19,13 +16,11 @@
   "bugs": {
     "url": "https://github.com/Xclusive09/REST-API/issues"
   },
-  "engines": {
-    "node": "20.6.0"
-  },
   "homepage": "https://github.com/Xclusive09/REST-API#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^5.13.9"
+    "mongoose": "^7.5.1"
   }
 }
